# AWS-Projects

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
data-engineering-analytics-platform/: config.py  deploy.py  teardown.py  template.yaml
data-engineering-analytics-platform/processor/: stream_processor.py
data-engineering-analytics-platform/producer/: event_producer.py  sample_queries.sql
highly-available-web-app/: config.py  deploy.py  infrastructure.py  teardown.py  template.yaml
kubernetes-devops-platform/: config.py  deploy.py  teardown.py  template.yaml
kubernetes-devops-platform/helm/: values.yaml
kubernetes-devops-platform/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  rbac.yaml  service.yaml
multi-region-disaster-recovery/: config.py  deploy.py  dr_test.py  global_template.yaml  health_monitor.py  primary_template.yaml  secondary_template.yaml  teardown.py
serverless-microservices/: api_gateway_config.py  config.py  deploy.py  teardown.py  template.yaml
serverless-microservices/lambdas/: checkout_handler.py  checkout_processor.py  inventory_handler.py  notification_handler.py  shipment_handler.py
tests/: test_checkout.py  test_health_monitor.py  test_infrastructure.py  test_stream_processor.py
