[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-projects"
version = "1.0.0"
description = "Production-grade AWS cloud infrastructure projects portfolio"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jehanzeb Bashir", email = "jehanzebbashir33@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/jehanzebbashir33-cmyk/AWS-Projects"
Repository = "https://github.com/jehanzebbashir33-cmyk/AWS-Projects"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.flake8]
max-line-length = 127
max-complexity = 10
exclude = [".git", "__pycache__", "build", "dist"]

[tool.black]
line-length = 127
target-version = ["py39"]